# 3DCurves

./: README.md
src/: Makefile
src/3DCurves_app/: main.cpp
src/3DCurves_lib/: CMakeLists.txt
src/3DCurves_lib/inc/: circle.h  curve.h  ellipse.h  helix.h  point.h  vector3d.h
src/3DCurves_lib/src/: circle.cpp  ellipse.cpp  helix.cpp
